--- a/week2/index.html
+++ b/week2/index.html
@@ -6,12 +6,9 @@
     <title>CSS practice</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- <style>
       h1 {
@@ -23,7 +20,7 @@
     </style> -->
   </head>
   <body>
-    <h1 class="blue-color">Interactive Media</h1>
+    <h1 class="blue-color lobster">Interactive Media</h1>
     <h2>Course co-ordinator: Dr. Rohit Ashok Khot</h2>
     <h3>
       Email:rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm) Instructors: Dr.
