--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,11 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first assignment</title>
-</head>
-<body>
-    <h1>my first assignment</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cecile's first assignment</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Caveat:wght@400..700&family=Sawarabi+Mincho&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1>Interactive Experience</h1>
+    <h1>Research Project</h1>
+    <h2>
+      Frank Gehry <span class="smaller">and</span> the Walt Disney Concert Hall
+    </h2>
+    <!-- I used span to change the font size of "and", made the style better -->
+    <h4>By Cecile Yang</h4>
+    <h4>s4121253</h4>
+    <section>
+      <h3>
+        1. What was the first thing you paid attention to when interacting with
+        the experience?
+      </h3>
+      <p>
+        The first thing I paid attention to was the text description on the
+        website.
+      </p>
+      <h3>
+        2. Spend two minutes with the experience and create a list of each of
+        your discrete actions.
+      </h3>
+      <p>
+        After reading the website text, I moved my mouse and noticed that the
+        large letters “Sculpture Harmony” distorted as I moved the cursor. I
+        then right-clicked and tried dragging it, which caused the webpage to
+        change colors and display text following the mouse’s movement.
+      </p>
+      <p>
+        After that, I found the Menu button and browsed through the chapters in
+        order, which included videos. Before the first chapter finished playing,
+        I used the menu to return to the main interface, then scrolled according
+        to the text prompts, discovering that scrolling also allowed me to
+        switch between chapters one to three.
+      </p>
+      <h3>
+        3. What part of the experience did you spend the most time engaging
+        with?
+      </h3>
+      <p>
+        While scrolling to switch pages, 3D images of the Disney Concert Hall
+        appeared from different angles. This experience was very interesting,
+        and I watched it several times.
+      </p>
+      <h3>
+        4. What was the most common action in your two minute interaction with
+        the experience?
+      </h3>
+      <p>Using the navigation menu.</p>
+      <h3>
+        5.What is your impression of the intended primary goal of the
+        interactive experience?
+      </h3>
+      <p>
+        I think the primary goal of the website is to allow users to immerse
+        themselves in the story of Frank Gehry and the Disney Concert Hall.
+      </p>
+      <h3>
+        6. How does the interactive experience communicate this primary goal?
+      </h3>
+      <p>
+        Through harmonious use of colors and the selection of symphonic music as
+        background audio.
+      </p>
+      <h3>
+        7. What is your impression of how the experience should be interacted
+        with over time? (For how long and how many different times)
+      </h3>
+      <p>
+        The website gives me a linear impression. Since the information provided
+        is not extremely varied, the presentation feels like an immersive
+        reading experience with music and videos. It is suitable for slow
+        exploration, possibly in sessions of ten minutes or more.
+      </p>
+      <h3>
+        8. How does the interactive experience communicate how it should be
+        interacted with over time?
+      </h3>
+      <p>
+        The website has a clear chapter structure, with each chapter containing
+        a video that can be divided into segments which can be fast-forwarded by
+        clicking. The videos themselves are not very short, which encourages
+        slow and thoughtful exploration.
+      </p>
+      <h3>
+        9. What other media forms (digital or otherwise) does the experience
+        reference?
+      </h3>
+      <p>
+        The design of the website evokes the layout and visual style of a
+        magazine, with carefully arranged sections and imagery that resemble
+        editorial spreads. Within the site, there are embedded videos,
+        interactive elements that function like dynamic photos which can be
+        zoomed in and out using the mouse scroll wheel, and background music
+        that enhances the atmosphere. These references combine both digital and
+        traditional media forms to create a rich, immersive experience.
+      </p>
+      <h3>
+        10. What does this reference/s communicate to you about how you should
+        act when engaging with your research experience?
+      </h3>
+      <p>
+        The references to magazine-style layouts, embedded videos, and
+        interactive dynamic photos suggest that I should actively explore the
+        content at my own pace. I am encouraged to scroll, click, and zoom to
+        examine details, watch the videos, and navigate different sections
+        thoughtfully rather than passively scrolling through the site.
+      </p>
+      <h3>
+        11. What does this reference/s communicate to you about how you should
+        feel when engaging with your research experience?
+      </h3>
+      <p>
+        These media references create a sense of immersion and engagement,
+        inviting curiosity and attentiveness. The magazine-like presentation and
+        background music set a reflective, contemplative mood, encouraging me to
+        feel interested, inspired, and connected to Gehry’s work while exploring
+        the experience.
+      </p>
+      <h3>
+        12. What is the most frustrating part of the interaction to you and what
+        makes that part frustrating?
+      </h3>
+      <p>
+        Although the dynamic photo design is impressive, the zoom speed of the
+        photos is very fast regardless of how slowly I scroll the mouse wheel,
+        which gives me a strong sense of dizziness. This part of the interaction
+        could benefit from further refinement.
+      </p>
+      <h3>
+        13. What is the most satisfying part of the interaction to you and what
+        makes that part satisfying?
+      </h3>
+      <p>
+        I really enjoy the website’s design elements, especially the homepage’s
+        use of monochrome and clean sketch lines to depict shapes, which gives a
+        unique and sophisticated impression. The text that follows the mouse
+        cursor is also very creative, and the use of sans-serif fonts is
+        perfectly balanced and avant-garde.
+      </p>
+    </section>
+  </body>
 </html>
