--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -46,6 +46,7 @@
           controls
         ></audio>
         <!--I want some sound effect when user click the button  -->
+        <!-- I chose piano key sound to convey the sense of relaxation -->
         <!-- https://freesound.org/people/dwengomes/sounds/409468/ -->
         <audio src="piano_key.mp3" id="pop-sound"></audio>
         <div class="custom-controls">
@@ -62,7 +63,7 @@
            src="https://img.icons8.com/ios-glyphs/30/play--v1.png"
            alt="Play Button" width="20" height="20" />
     </button>
-
+<!-- mute button  -->
     <button id="mute-unmute-btn" class="with-sound">
       <img id="mute-unmute-img"
            src="https://img.icons8.com/ios-glyphs/30/no-audio--v1.png"
