--- a/A3T1/index.html
+++ b/A3T1/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TarotsWorld</title>
+    <!-- This website can be used to showcase a portfolio, 
+     character design sheets, or be further developed into an online card game. 
+     The parts I completed include page navigation and card-flipping interactions. 
+     The overall style features a magical and mysterious pixel-art aesthetic. -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
