--- a/A3T1/character.html
+++ b/A3T1/character.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Choose your Card</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <!-- I tried to create an effect where the background changes after clicking 
+     to flip a card, but it didn’t work as intended,
+      possibly due to conflicting commands, 
+      so I decided to keep only the card-flipping feature. -->
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="character.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <audio id="clickSound" src="short-choir-6116.mp3"></audio>
     <!-- https://pixabay.com/sound-effects/search/holy/?pagi=2 -->
-     
+
     <div class="cards-wrapper">
-        <!-- first card -->
-    <div class="card-container">
+      <!-- first card -->
+      <div class="card-container">
         <div class="card">
-        <div class="card-face"><img src="back.png" alt="">
+          <div class="card-face">
+            <img src="back.png" alt="" />
             <!-- https://www.braceletbook.com/patterns/alpha/193103/ -->
+          </div>
+          <div class="card-face-flip"><img src="fortune.png" alt="" /></div>
         </div>
-        <div class="card-face-flip"><img src="fortune.png" alt=""></div>
-        </div>
-    </div>
-    <!-- second card -->
-     <div class="card-container">
+      </div>
+      <!-- second card -->
+      <div class="card-container">
         <div class="card">
-        <div class="card-face"><img src="back.png" alt="">
-            <!-- https://www.braceletbook.com/patterns/alpha/193103/ -->
+          <div class="card-face"><img src="back.png" alt="" /></div>
+          <div class="card-face-flip"><img src="hermit.png" alt="" /></div>
         </div>
-        <div class="card-face-flip"><img src="hermit.png" alt=""></div>
-        </div>
-    </div>
-    <!-- third card -->
+      </div>
+      <!-- third card -->
       <div class="card-container">
         <div class="card">
           <div class="card-face">
@@ -40,8 +43,8 @@
           <div class="card-face-flip">
             <img src="magician.png" alt="" />
           </div>
-          </div>
-          </div>
-</div>
-</body>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
